--- a/app/templates/components/mtg-data.hbs
+++ b/app/templates/components/mtg-data.hbs
@@ -1,11 +1,2 @@
-<h2>mtg-data</h2>
-<ol>
-    <li>
-      {{mtg-data-trails trails=trails levels=levels}}
-    </li>
-</ol>
-<ol>
-    <li>
-      {{mtg-data-levels levels=levels}}
-    </li>
-</ol>
+{{mtg-data-trails trails=trails levels=levels}}
+{{mtg-data-levels levels=levels}} ({{levels.length}})
