--- a/app/templates/map.hbs
+++ b/app/templates/map.hbs
@@ -1,8 +1,4 @@
-<div class="map-draw">
-  {{map-draw}}
+<div id="splitter-map-mtg-data">
+  {{map-app id="map" center="5.1475,45.6329" zoom="15"}}
+  <div>{{mtg-data trails=model.trails}}</div>
 </div>
-<div class="map-data">
-  {{map-data}}
-</div>
-{{mtg-data}}
-{{map-app id="map" center="5.1475,45.6329" zoom="15"}}
