--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -5,15 +5,16 @@ html, body, #map {
   height: 100%;
   overflow: hidden;
 }
+
 .map-draw {
   z-index: 100;
   background: rgba(0, 0, 0, 0);
-  width: 32px;
-  height: 210px;
-  margin-top: auto;
-  margin-bottom: auto;
+  width: 250px;
+  height: 32px;
+  margin-left: auto;
+  margin-right: auto;
   position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
+  left: 0; right: 0;
 }
 
 .map-data {
@@ -29,13 +30,10 @@ html, body, #map {
 
 .mtg-data {
   z-index: 100;
-  background: rgba(0, 0, 0, 0.7);
-  width: 30%;
+  background: rgba(255, 255, 255, 0.7);
+  width: 100%;
   height: 100%;
-  float: right;
-  color: lightgray;
-  resize: horizontal;
-  overflow: auto;
+  padding: 5px;
 }
 
 .table > tbody > tr > td {
