--- a/app/templates/components/map-data.hbs
+++ b/app/templates/components/map-data.hbs
@@ -1,12 +1,3 @@
-<h2>map-data</h2>
-<ol>
-    <li>
-      {{map-data-weather}}
-    </li>
-    <li>
-      {{map-data-layers}}
-    </li>
-    <li>
-      {{map-data-location}}
-    </li>
-</ol>
+{{map-data-layers}}
+{{map-data-weather center=center}}
+{{map-data-location}}
