--- a/app/templates/components/map-draw.hbs
+++ b/app/templates/components/map-draw.hbs
@@ -1,4 +1,4 @@
-<div class="btn-group">
+<div class="btn-group btn-group-vertical">
     <button type="button" data-toggle="tooltip" title="Add description"
             class="btn btn-marker btn-sm map-draw-marker" {{action 'toggleDraw' 'Marker'}}>
         <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
