--- a/app/templates/components/map-data-weather.hbs
+++ b/app/templates/components/map-data-weather.hbs
@@ -1,1 +1,79 @@
-<h3>map-data-weather</h3>
+{{#dropdown-list selected=selected item="Weather" img="assets/images/weather.png" color="info"}}
+    <ul class="dropdown-menu">
+        <li>
+            <table class="table table-striped table-condensed">
+                <thead>
+                <tr>
+                    <th colspan="2">
+                        <div class="col-lg-12">
+                            <div class="input-group input-group-sm">
+                              {{date-picker class="form-control" date=mydate valueFormat='YYYY-MM-DD' size="8"}}
+                              {{view "select" class="form-control input-sm" content=time optionValuePath="content" optionLabelPath="content.value" selection=selectedTime}}
+                                <span class="input-group-btn">
+                                  <button type="button" class="btn btn-default btn-sm" {{action 'checkWeather'}}>Get</button>
+                                </span>
+                            </div>
+                        </div>
+                    </th>
+                </tr>
+                </thead>
+              {{#if error }}
+                  <tbody>
+                  <tr class="warning">
+                      <td colspan="2">{{error}}</td>
+                  </tr>
+                  </tbody>
+              {{else}}
+                  <tr>
+                      <td class="title">Time (hhmm)</td>
+                      <td>{{weather.time}}</td>
+                  </tr>
+                  <tr>
+                      <td class="title">Icon</td>
+                      <td><img width="24" {{bind-attr src=weather.weatherIconUrl}} alt="Logo"/></td>
+                  </tr>
+                  <tr>
+                      <td class="title">Feels Like Temperature</td>
+                      <td>{{ weather.FeelsLikeC }} °C</td>
+                  </tr>
+                  <tr>
+                      <td class="title">Wind Direction Arrow</td>
+                      <td class="wind-direction"><img src="assets/images/arrow-right.png"/></td>
+                  </tr>
+                  <tr>
+                      <td class="title">Humidity</td>
+                      <td>{{ weather.humidity }} %</td>
+                  </tr>
+                  <tr>
+                      <td class="title">Precipitations</td>
+                      <td>{{ weather.precipMM }} mm</td>
+                  </tr>
+                  <tr>
+                      <td class="title">Wind Speed</td>
+                      <td>{{ weather.windspeedKmph }} km/h</td>
+                  </tr>
+                  <tr>
+                      <td class="title">Temperature</td>
+                      <td>{{weather.tempC}} °C</td>
+                  </tr>
+                  <tr>
+                      <td class="title">Wind Direction</td>
+                      <td>{{weather.winddir16Point}}</td>
+                  </tr>
+                  <tr>
+                      <td class="title">Visibility</td>
+                      <td>{{ weather.visibility }} km</td>
+                  </tr>
+                  <tr>
+                      <td class="title">Pressure</td>
+                      <td>{{ weather.pressure }} millibars</td>
+                  </tr>
+                  <tr>
+                      <td class="title">Cloud Coverage</td>
+                      <td>{{ weather.cloudcover }} %</td>
+                  </tr>
+              {{/if}}
+            </table>
+        </li>
+    </ul>
+{{/dropdown-list}}
