--- a/app/templates/map-weather.hbs
+++ b/app/templates/map-weather.hbs
@@ -1,4 +1,4 @@
-{{#dropdown-list selected=selected item="Weather" img="assets/images/weather.png" color="info"}}
+{{#dropdown-list selected=selected item="Weather" img="assets/images/weather.png" color="default"}}
   <ul class="dropdown-menu">
     <li>
       <table class="table table-striped table-condensed">
