--- a/app/templates/map-location.hbs
+++ b/app/templates/map-location.hbs
@@ -2,3 +2,6 @@
 <span class="input-group-btn">
   <button type="button" data-hint="Place Lookup" class="btn btn-default hint--bottom" {{action 'findLocation'}}>Go</button>
 </span>
+<span class="input-group-btn">
+  <button type="button" data-hint="GPS" class="btn btn-default hint--bottom" {{action 'gpsLocation'}}>GPS</button>
+</span>
