mise à jour site mobile: bug sur la gestion des layers

--- a/app/templates/map-mobile.hbs
+++ b/app/templates/map-mobile.hbs
@@ -1,7 +1,6 @@
 <div class="top-container">
-  {{render "mobileData" mapData}}
-  {{view "mapLayers"}}
+  {{render "mapLayers" map}}
 </div>
 {{render "mapLocation" mapLocation}}
-{{view "map" id="map"}}
+{{render "map" map}}
 
