test mobile infructueux

--- a/app/templates/map-app.hbs
+++ b/app/templates/map-app.hbs
@@ -1,9 +1,9 @@
 {{render "mapDraw" mapDraw}}
+{{render "mapLocation" mapLocation}}
+{{render "map" map}}
 <div class="top-container">
   {{render "mapData" mapData}}
   {{render "mapWeather" mapWeather}}
-  {{view "mapLayers"}}
+  {{render "mapLayers" map}}
 </div>
-{{render "mapLocation" mapLocation}}
-{{render "map" map}}
 
