--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -29,7 +29,7 @@ html, body, #map {
 .top-container {
   z-index: 100;
   position: absolute;
-  width: 580px;
+  width: 588px;
   margin-left: auto;
   margin-right: auto;
   top:5px; right:0; left: 0;
@@ -62,6 +62,15 @@ ul.map-layers-dropdown {
 
 .map-data ul.dropdown-menu {
   width: 454px;
+}
+.map-data ul.map-data-import-dropdown {
+  width: 100px;
+}
+
+.map-data-import-dropdown button {
+  width: 90px;
+  margin-left: 4px;
+  margin-bottom: 4px;
 }
 
 .map-data ul.map-items-dropdown {
