--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -10,7 +10,8 @@ html, body, #map {
   z-index: 100;
   background: rgba(0, 0, 0, 0);
   width: 50px;
-  height: 250px;
+//  height: 250px;
+  height: 204px;
   margin-top: auto;
   margin-bottom: auto;
   position: absolute;
@@ -29,7 +30,7 @@ html, body, #map {
 .top-container {
   z-index: 100;
   position: absolute;
-  width: 588px;
+  width: 405px;
   margin-left: auto;
   margin-right: auto;
   top:5px; right:0; left: 0;
@@ -61,7 +62,7 @@ ul.map-layers-dropdown {
 }
 
 .map-data ul.dropdown-menu {
-  width: 454px;
+  width: 300px;
 }
 .map-data ul.map-data-import-dropdown {
   width: 100px;
@@ -78,7 +79,7 @@ ul.map-layers-dropdown {
 }
 
 .map-data input, .map-data select {
-  width: 100px!important;
+//  width: 100px!important;
 }
 
 .map-items-dropdown .mtg-item-position-container {
@@ -252,7 +253,7 @@ label.mtg-item-position input[type="radio"] {
   padding-right: 5px;
 }
 
-.btn-marker {
+.btn-pink {
   background-color: hsl(312, 80%, 43%) !important;
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e727c0", endColorstr="#c515a2");
@@ -269,7 +270,7 @@ label.mtg-item-position input[type="radio"] {
   -webkit-font-smoothing: antialiased;
 }
 
-.btn-marker:hover {
+.btn-pink:hover {
   background-color: hsl(312, 80%, 33%) !important;
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#c515a2", endColorstr="#97107c");
