--- a/app/templates/map-data.hbs
+++ b/app/templates/map-data.hbs
@@ -1,9 +1,30 @@
 <form class="form-inline btn-group">
-  {{input class="form-control input-sm btn-group" placeholder="trail's name" value=addTrailName}}
-    <button type="button" class="btn btn-default btn-sm" {{action 'addTrail'}}>
-        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-    </button>
-  {{view "select" class="form-control input-sm btn-group" content=trails optionValuePath="content" optionLabelPath="content.name" selection=selectedTrail}}
+  {{#dropdown-list item="Trails" img="assets/images/track.png"}}
+      <ul class="dropdown-menu map-data-trails-dropdown">
+          <li>
+              <table class="table table-hover table-striped table-condensed">
+                  <thead>
+                  <tr>
+                      <th>
+                        {{input class="form-control input-sm btn-group" placeholder="trail's name" value=addTrailName}}
+                          <button type="button" class="btn btn-default btn-sm" {{action 'addTrail'}}>
+                              <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                          </button>
+
+                      </th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  {{#each trail in trails}}
+                      <tr class={{if trail.selected 'success' ''}} {{action 'changeTrack' trail}}>
+                          <td>{{trail.name}}</td>
+                      </tr>
+                  {{/each}}
+                  </tbody>
+              </table>
+          </li>
+      </ul>
+  {{/dropdown-list}}
   {{#dropdown-list item="Import" icon="import"}}
       <ul class="dropdown-menu map-data-import-dropdown">
           <li>
