--- a/app/templates/map.hbs
+++ b/app/templates/map.hbs
@@ -1,8 +1,8 @@
-{{render "mapDraw" mapDraw}}
 {{render "mapLocation" mapLocation}}
 {{view id="map"}}
-<div class="top-container">
+<div class="top-container btn-group">
   {{render "mapData" mapData}}
+  {{render "mapDraw" mapDraw}}
   {{render "mapWeather" mapWeather}}
   {{view "mapLayers"}}
 </div>
