--- a/app/templates/map-data.hbs
+++ b/app/templates/map-data.hbs
@@ -1,63 +1,82 @@
-<form class="form-inline btn-group">
-  {{#dropdown-list item="Trails" img="assets/images/track.png"}}
-      <ul class="dropdown-menu map-data-trails-dropdown">
-          <li>
-              <table class="table table-hover table-striped table-condensed">
-                  <thead>
-                  <tr>
-                      <th>
-                        {{input class="form-control input-sm btn-group" placeholder="trail's name" value=addTrailName}}
-                          <button type="button" class="btn btn-default btn-sm" {{action 'addTrail'}}>
-                              <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                          </button>
+<!--<form class="form-inline btn-group">-->
+{{#dropdown-list item="Trails" img="assets/images/track.png"}}
+    <ul class="dropdown-menu map-data-trails-dropdown">
+        <li>
+            <table class="table table-hover table-striped table-condensed">
+                <thead>
+                <tr>
+                    <th>
+                      {{input class="form-control input-sm btn-group" placeholder="trail's name" value=addTrailName}}
+                        <button type="button" class="btn btn-default btn-sm" {{action 'addTrail'}}>
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        </button>
 
-                      </th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  {{#each trail in trails}}
-                      <tr class={{if trail.selected 'success' ''}} {{action 'changeTrack' trail}}>
-                          <td>{{trail.name}}</td>
-                      </tr>
-                  {{/each}}
-                  </tbody>
-              </table>
-          </li>
-      </ul>
-  {{/dropdown-list}}
-  {{#dropdown-list item="Import" icon="import"}}
-      <ul class="dropdown-menu map-data-import-dropdown">
-          <li>
-              <button type="button" data-toggle="tooltip" title="Import the Trailer's Trail"
-                      class="btn btn-success btn-sm map-data-import-trailer" {{action 'triggerImport' 'map-data-import-trailer-input'}}>
-                  <img src="assets/images/walk.png" class="inverted" width="16" height="16"/>
-              </button>
-              <input type="file" id="map-data-import-trailer-input" class="hidden" accept=".gpx"/>
-          </li>
-          <li>
-              <button type="button" data-toggle="tooltip" title="Import the Team's Trail"
-                      class="btn btn-warning btn-sm map-data-import-team" {{action 'triggerImport' 'map-data-import-team-input'}}>
-                  <img src="assets/images/track.png" class="inverted" width="16" height="16"/>
-              </button>
-              <input type="file" id="map-data-import-team-input" class="hidden" accept=".gpx"/>
-          </li>
-      </ul>
-  {{/dropdown-list}}
-  {{view 'mtgLevels'}}
-  {{view 'mtgItems'}}
-  {{#dropdown-list selected=selected item="Export" icon="export"}}
-      <ul class="dropdown-menu map-data-export-dropdown">
-        {{#each format in formats}}
-            <li><a {{action 'exportTrail' format selectedTrail}}>{{format}}</a></li>
-        {{/each}}
-      </ul>
-  {{/dropdown-list}}
-    <button type="button"
-            class="btn btn-warning btn-sm" {{action 'deleteTrail' selectedTrail}}>
-        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-    </button>
-    <button type="button" class="btn btn-default btn-sm" {{action 'saveTrail' selectedTrail}}>
-        <span class="glyphicon glyphicon-save" aria-hidden="true"></span>
-    </button>
-</form>
+                    </th>
+                </tr>
+                </thead>
+                <tbody>
+                {{#each trail in trails}}
+                    <tr class={{if trail.selected 'success' ''}} {{action 'changeTrack' trail}}>
+                        <td>{{trail.name}}</td>
+                    </tr>
+                {{/each}}
+                </tbody>
+            </table>
+        </li>
+    </ul>
+{{/dropdown-list}}
+<!--  data-toggle="tooltip" title="Tools related to your trails" -->
+{{#dropdown-list item="Tools" icon="th"}}
+    <ul class="dropdown-menu map-data-tools-dropdown">
+        <li class="btn-group">
+          {{#dropdown-list item="Import" icon="import" resetView="false"}}
+              <ul class="dropdown-menu map-data-import-dropdown">
+                  <li>
+                      <table class="table table-hover table-condensed">
+                          <tbody>
+                          <tr>
+                              <td {{action 'triggerImport' 'map-data-import-trailer-input'}}>
+                                  <span type="button" data-toggle="tooltip" title="Import the Trailer's Trail"
+                                          class="btn btn-success btn-sm map-data-import-trailer">
+                                      <img src="assets/images/walk.png" class="inverted" width="16" height="16"/>
+                                  </span>
+                                  Import trailer's track
+                                  <input type="file" id="map-data-import-trailer-input" class="hidden" accept=".gpx"/>
+                              </td>
+                          </tr>
+                          <tr>
+                              <td {{action 'triggerImport' 'map-data-import-team-input'}}>
+                                  <span type="button" data-toggle="tooltip" title="Import the Team's Trail"
+                                        class="btn btn-warning btn-sm map-data-import-team">
+                                      <img src="assets/images/track.png" class="inverted" width="16" height="16"/>
+                                  </span>
+                                  Import team's track
+                                  <input type="file" id="map-data-import-team-input" class="hidden" accept=".gpx"/>
+                              </td>
+                          </tr>
+                          </tbody>
+                      </table>
+                  </li>
+              </ul>
+          {{/dropdown-list}}
+          {{view 'mtgLevels'}}
+          {{view 'mtgItems'}}
+          {{#dropdown-list selected=selected item="Export" icon="export"  resetView="false"}}
+              <ul class="dropdown-menu map-data-export-dropdown">
+                {{#each format in formats}}
+                    <li><a {{action 'exportTrail' format selectedTrail}}>{{format}}</a></li>
+                {{/each}}
+              </ul>
+          {{/dropdown-list}}
+            <button type="button"
+                    class="btn btn-warning btn-sm" {{action 'deleteTrail' selectedTrail}}>
+                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+            </button>
+            <button type="button" class="btn btn-default btn-sm" {{action 'saveTrail' selectedTrail}}>
+                <span class="glyphicon glyphicon-save" aria-hidden="true"></span>
+            </button>
+        </li>
+    </ul>
+{{/dropdown-list}}
+<!--</form>-->
 
