--- a/app/templates/mtg-levels.hbs
+++ b/app/templates/mtg-levels.hbs
@@ -1,4 +1,4 @@
-{{#dropdown-list selected=selectedLevel item="Level" img="assets/images/rocket.png"}}
+{{#dropdown-list selected=selectedLevel item="Level" img="assets/images/rocket.png" resetView="false"}}
 <ul class="dropdown-menu map-data-level-dropdown">
   <li class="header">
     <div class="input-group input-group-sm">
