modification de la taille des boutons (+ grande)

--- a/app/templates/components/dropdown-list.hbs
+++ b/app/templates/components/dropdown-list.hbs
@@ -1,4 +1,4 @@
-<button type="button" {{bind-attr class=":btn :btn-sm btnColorName :dropdown-toggle btnClassName"}} {{action "toggle"}}>
+<button type="button" {{bind-attr class=":btn btnColorName :dropdown-toggle btnClassName"}} {{action "toggle"}}>
 {{#if icon}}
   <span {{bind-attr class=":glyphicon glyphicon"}} aria-hidden="true"></span>
 {{else}}
